--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-streamlit
-google-generativeai
-numpy
-Pillow
-PyMuPDF
-streamlit-webrtc
-soundfile
+streamlit>=1.28.0
+google-generativeai>=0.3.0
+PyPDF2>=3.0.1
+Pillow>=9.5.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+streamlit-webrtc>=0.47.0
+aiortc>=1.6.0
+av>=10.0.0
+pydub>=0.25.1
+python-dotenv>=1.0.0
